--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ div#formAdd {
 	width:100%;
 	height:100%;
 
-	background-color:#f9f4d6;
+	background-color:#f7eedc;
 }
 
 /* ********** TEXT ********** */
